--- a/package.json
+++ b/package.json
@@ -4,21 +4,30 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vite build",
+    "lint": "vue-cli-service lint",
+    "dev": "vite",
+    "sass:build": "sass --no-source-map scss:css"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "js-cookie": "^3.0.5",
+    "pinia": "^3.0.4",
+    "vite": "^7.2.1",
+    "vue": "^3.2.13",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@vitejs/plugin-vue": "^6.0.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass-embedded": "^1.93.3"
   },
   "eslintConfig": {
     "root": true,
